--- a/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
+++ b/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
@@ -34,6 +34,7 @@ body {
 :root {
   &[dialogroot] {
     background-color: transparent;
+    min-width: 504px;
 
     body {
       padding: 0;
@@ -57,8 +58,6 @@ body {
   @media (prefers-contrast: more) {
     background-color: var(--in-content-page-background);
   }
-
-  --main-content-min-height: 271px;
 
   // Transition all of these and reduced motion effectively only does opacity.
   --transition: 0.6s opacity, 0.6s scale, 0.6s rotate, 0.6s translate;
@@ -94,11 +93,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    &.with-noodles {
-      height: 503px;
-      width: 504px;
-    }
+    width: 504px;
+    flex-shrink: 0;
   }
 
   .main-content {
@@ -133,15 +129,45 @@ body {
     min-height: 500px;
     overflow: hidden;
 
+    &.light-text {
+      --in-content-page-color: rgb(251, 251, 254);
+      --in-content-primary-button-text-color: rgb(43, 42, 51);
+      --in-content-primary-button-text-color-hover: rgb(43, 42, 51);
+      --in-content-primary-button-background: rgb(0, 221, 255);
+      --in-content-primary-button-background-hover: rgb(128, 235, 255);
+      --in-content-primary-button-background-active: rgb(170, 242, 255);
+      --in-content-link-color: var(--in-content-primary-button-background);
+      --in-content-link-color-hover: var(--in-content-primary-button-background-hover);
+      --in-content-link-color-active: var(--in-content-primary-button-background-active);
+      --in-content-link-color-visited: var(--in-content-link-color);
+      --checkbox-checked-bgcolor: var(--in-content-primary-button-background);
+      --in-content-button-text-color: var(--in-content-page-color);
+    }
+
+    &.dark-text {
+      --in-content-page-color: rgb(21,  20,  26);
+      --in-content-primary-button-text-color: rgb(251, 251, 254);
+      --in-content-primary-button-text-color-hover: rgb(251, 251, 254);
+      --in-content-primary-button-background: #0061E0;
+      --in-content-primary-button-background-hover: #0250BB;
+      --in-content-primary-button-background-active: #053E94;
+      --in-content-primary-button-border-color: transparent;
+      --in-content-primary-button-border-hover: transparent;
+      --in-content-link-color: var(--blue-60);
+      --in-content-link-color-hover: var(--blue-70);
+      --in-content-link-color-active: var(--blue-80);
+      --in-content-link-color-visited: var(--blue-60);
+      --checkbox-checked-bgcolor: var(--in-content-primary-button-background);
+      --in-content-button-text-color: var(--in-content-page-color);
+    }
+
     &:dir(rtl) {
       transform: rotateY(180deg);
     }
   }
 
   .brand-logo {
-    background: url('chrome://branding/content/about-logo.svg') top center / $logo-size no-repeat;
-    padding: $logo-size 0 10px;
-    margin-top: 60px;
+    margin-block: 60px 10px;
     transition: var(--transition);
 
     &.cta-top {
@@ -171,7 +197,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5px;
+    margin: 0.5em 1em;
     transition: var(--transition);
 
     h1,
@@ -185,7 +211,6 @@ body {
       font-weight: 600;
       margin: 0 6px;
       letter-spacing: -0.02em;
-      width: 283px;
       outline: none;
     }
 
@@ -197,6 +222,50 @@ body {
       max-width: 750px;
       letter-spacing: -0.01em;
     }
+
+    &.larger {
+      h1 {
+        font-size: 36px;
+      }
+    }
+
+    &.slim {
+      h1 {
+        font-weight: 276;
+      }
+    }
+
+    &.fancy {
+      h1 {
+        background-image: linear-gradient(90deg, #9059FF, #FF4AA2, #FF8C00, #FF4AA2, #9059FF);
+        background-size: 400% auto;
+        color: #000;
+        background-clip: text;
+        -webkit-background-clip: text;
+        animation: shine 50s linear infinite;
+        @media (prefers-contrast: no-preference) {
+          -webkit-text-fill-color: transparent;
+        }
+        @media (prefers-color-scheme: dark) {
+          background-image: linear-gradient(90deg, #C688FF, #FF84C0, #FFBD4F, #FF84C0, #C688FF);
+        }
+      }
+
+      @keyframes shine {
+        to {
+          background-position: 400% center;
+        }
+      }
+    }
+  }
+
+  // Override light and dark mode fancy title colors for use over light and dark backgrounds
+  .screen.light-text .welcome-text.fancy h1 {
+    background-image: linear-gradient(90deg, #C688FF, #FF84C0, #FFBD4F, #FF84C0, #C688FF);
+  }
+
+  .screen.dark-text .welcome-text.fancy h1 {
+    background-image: linear-gradient(90deg, #9059FF, #FF4AA2, #FF8C00, #FF4AA2, #9059FF);
   }
 
   .welcomeZap {
@@ -778,29 +847,6 @@ body {
     }
   }
 
-  .confetti {
-    display: block;
-    margin: auto;
-    background-image: url('chrome://activity-stream/content/data/content/assets/confetti.svg');
-    background-position: top;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 438px;
-    width: 504px;
-    position: absolute;
-    z-index: -1;
-
-    @media (max-width: $break-point-large) {
-      height: 400px;
-      width: 450px;
-    }
-
-    @media (max-width: $break-point-medium) {
-      height: 370px;
-      width: 420px;
-    }
-  }
-
   .outline-L {
     background-image: url('chrome://activity-stream/content/data/content/assets/noodle-outline-L.svg');
   }
@@ -871,8 +917,6 @@ body {
     }
 
     .section-main {
-      flex-shrink: 0;
-      width: 490px;
       z-index: 1;
 
       .main-content {
@@ -881,6 +925,7 @@ body {
         display: block;
         position: absolute;
         height: 350px;
+        width: 295px;
         bottom: -60px;
         inset-inline-end: 80px;
         transition: var(--transition);
@@ -937,20 +982,6 @@ body {
     .section-main {
       z-index: 1;
       margin: auto;
-
-      .main-content-inner {
-        min-height: var(--main-content-min-height);
-      }
-
-      @media (max-width: $break-point-large) {
-        width: 450px;
-        height: auto;
-      }
-
-      @media (max-width: $break-point-medium) {
-        width: 420px;
-        height: auto;
-      }
     }
 
     //Position of noodles on second screen
@@ -967,24 +998,12 @@ body {
       height: 660px;
       transform: rotate(-155deg) translate(11%, -18%);
       transition-delay: 0.2s;
-
-      @media (max-width: $break-point-large) {
-        width: 448px;
-        height: 568px;
-        transform: rotate(-155deg) translate(12%, -21%);
-      }
     }
 
     .purple-C {
       width: 310px;
       height: 260px;
       transform: translate(-18%, -67%);
-
-      @media (max-width: $break-point-large) {
-        width: 294px;
-        height: 254px;
-        transform: translate(-20%, -62%);
-      }
     }
 
     .yellow-circle {
@@ -994,14 +1013,6 @@ body {
       transform: translate(230%, -5%);
       background: #952BB9;
       transition-delay: -0.2s;
-
-      @media (max-width: $break-point-large) {
-        transform: translate(205%, -5%);
-      }
-
-      @media (max-width: $break-point-medium) {
-        transform: translate(185%, -5%);
-      }
     }
   }
 
@@ -1045,20 +1056,6 @@ body {
     .section-main {
       z-index: 1;
       margin: auto;
-
-      .main-content-inner {
-        min-height: var(--main-content-min-height);
-      }
-
-      @media (max-width: $break-point-large) {
-        width: 450px;
-        height: auto;
-      }
-
-      @media (max-width: $break-point-medium) {
-        width: 420px;
-        height: auto;
-      }
     }
 
     // Position of noodles on third screen
@@ -1068,10 +1065,6 @@ body {
       transform: rotate(250deg) translate(-420%, 425%);
       transition-delay: 0.2s;
       z-index: 2;
-
-      @media (max-width: $break-point-large) {
-        transform: rotate(250deg) translate(-400%, 280%);
-      }
     }
 
     .orange-L {
@@ -1079,11 +1072,6 @@ body {
       width: 660px;
       transform: rotate(35deg) translate(-10%, -7%);
       transition-delay: -0.4s;
-
-      @media (max-width: $break-point-large) {
-        height: 740px;
-        width: 600px;
-      }
     }
 
     .purple-C {
@@ -1100,37 +1088,6 @@ body {
       border-radius: 50%;
       transform: translate(160%, 130%);
       background: #E7258C;
-    }
-  }
-
-  .fancy-headings {
-    h1 {
-      font-size: 36px;
-      line-height: unset;
-      width: 410px;
-      padding-bottom: 16px;
-      position: relative;
-      text-align: center;
-      background-image: linear-gradient(90deg, #6173FF, #ED1D5F, #F6901E, #6173FF);
-      background-size: 400% auto;
-      color: #000;
-      background-clip: text;
-      -webkit-background-clip: text;
-      animation: shine 50s linear infinite;
-
-      @media (prefers-contrast: no-preference) {
-        -webkit-text-fill-color: transparent;
-      }
-    }
-
-    @keyframes shine {
-      to {
-        background-position: 400% center;
-      }
-    }
-
-    h2 {
-      margin: 10px 30px 0;
     }
   }
 
@@ -1261,5 +1218,9 @@ body {
         transition-delay: 0.4s;
       }
     }
+  }
+
+  .screen.with-noodles:not(.corner) .section-main {
+    height: 503px;
   }
 }
