--- a/toolkit/themes/shared/alert.css
+++ b/toolkit/themes/shared/alert.css
@@ -1,10 +1,48 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 @import url("chrome://global/skin/global.css");
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+#alertBox {
+  border: 1px solid threedshadow;
+  background-color: -moz-Dialog;
+  color: -moz-DialogText;
+}
+
+@media (-moz-platform: windows) {
+  #alertNotification {
+    appearance: none;
+    background: transparent;
+    padding: 10px;
+  }
+
+  #alertBox {
+    border-radius: 1px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.59);
+  }
+
+  @media (-moz-windows-default-theme) {
+    #alertBox {
+      border-color: rgba(107,107,107,.3);
+      background-color: rgba(255,255,255,.9);
+      color: rgba(0,0,0,.9);
+    }
+  }
+}
+
+@media (-moz-platform: macos) {
+  #alertNotification {
+    appearance: none;
+    background: transparent;
+  }
+
+  #alertBox {
+    border-radius: 1px;
+  }
+}
 
 #alertBox[animate] {
   animation-timing-function: cubic-bezier(.12,1.23,.48,1.09);
@@ -15,16 +53,16 @@
   animation-name: alert-clicked-animation;
 }
 
-
-
+/* This is used if the close button is clicked
+   before the animation has finished. */
 #alertBox[animate][closing] {
   animation-duration: .6s;
   animation-name: alert-closing-animation;
 }
 
 #alertBox[animate]:not([clicked], [closing]):hover {
-  
-
+  /* !important is necessary because CSS animations have highest
+     importance in the cascade with exception to !important rules. */
   opacity: 1 !important;
 }
 
@@ -88,9 +126,9 @@
 
 .alertTextBox {
   padding-top: 4px;
-  
-
-
+  /* The text box width is increased to make up for the lack of image when one
+     is not provided. 349px is the text box width when a picture is present,
+     255px, plus the width of the image, 80px, and the margins, 7px each. */
   width: 349px;
 }
 
