--- a/layout/generic/test/test_bug1499961.html
+++ b/layout/generic/test/test_bug1499961.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <html>
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1499961
 
+Some tests ported from IntersectionObserver/polyfill/intersection-observer-test.html
 
+Original license header:
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+Copyright 2016 Google Inc. All Rights Reserved.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+    http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for Bug 1499961</title>
@@ -397,7 +397,7 @@
   }
 
   function onLoad() {
-    SpecialPowers.pushPrefEnv({"set": [["dom.IntersectionObserver.enabled", true]]}, next);
+    next();
   }
 
   SimpleTest.waitForExplicitFinish();
