Bug 1819109 - Remove snav.enabled. r=masayuki,geckoview-reviewers,emilio,owlish
Although we have removed Spatial navigation by bug 1341737, we still touch
`snav.enabled`. Let's remove it.

Differential Revision: https://phabricator.services.mozilla.com/D172390

UltraBlame original commit: 144da8bd68442c1bee19ea17de4383753dc93e8c

--- a/layout/forms/test/test_bug345267.html
+++ b/layout/forms/test/test_bug345267.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=345267
+-->
 <head>
   <title>Test for Bug 345267</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -29,8 +29,7 @@
 
 /** Test for Bug 345267 **/
 SimpleTest.waitForExplicitFinish();
-// Turn off Spatial Navigation to stop if from hijacking "left" keypress event.
-SpecialPowers.pushPrefEnv({"set":[['snav.enabled', false]]}, runTest);
+runTest();
 
 function runTest() {
   is($("d1").value, "abcde",
