--- a/layout/forms/test/test_bug563642.html
+++ b/layout/forms/test/test_bug563642.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=563642
+-->
 <head>
   <title>Test for Bug 563642</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -74,10 +74,7 @@ function runTest() {
   SimpleTest.finish();
 }
 SimpleTest.waitForExplicitFinish();
-// Turn off Spatial Navigation because it hijacks down and up key events.
-SimpleTest.waitForFocus(function() {
-  SpecialPowers.pushPrefEnv({"set":[["snav.enabled", false]]}, runTest);
-})
+SimpleTest.waitForFocus(runTest);
 
 </script>
 </pre>
