--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -786,6 +786,7 @@
             is="highlightable-button"
             class="accessory-button"
             data-l10n-id="network-proxy-connection-settings"
+            searchkeywords="doh trr"
             search-l10n-ids="
               connection-window2.title,
               connection-proxy-option-no.label,
@@ -805,6 +806,8 @@
               connection-proxy-reload.label,
               connection-proxy-autologin.label,
               connection-proxy-socks-remote-dns.label,
+              connection-dns-over-https.label,
+              connection-dns-over-https-url-custom.label,
           " />
   </hbox>
 </groupbox>
