--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -282,6 +282,10 @@
   }
 }
 
+#identity-popup-content-verifier-unknown > label {
+  display: inline;
+}
+
 /* CONTENT BLOCKING / TRACKING PROTECTION */
 
 #protections-popup-sendReportView-heading,
