Bug 1933491 - Display only first letter of tab group label in non-expanded vertical tabs. r=dwalker,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D230278

UltraBlame original commit: 081492830e277c9a105b7b20b6ee665b38f1c365

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -880,8 +880,13 @@
     width: var(--tab-collapsed-background-width);
     min-height: var(--tab-collapsed-background-width);
     max-width: var(--tab-collapsed-background-width);
-    line-height: var(--tab-collapsed-background-width);
     margin: auto;
+    font-size: 0;
+
+    &:first-letter {
+      font: message-box;
+      line-height: var(--tab-collapsed-background-width);
+    }
   }
 
   #tabbrowser-tabs[tablist-has-focus] &.tablist-keyboard-focus {
