Backed out changeset 62ed9ebaa426 (bug 1933152) for causing bc failures browser_ext_themes_tab_text.js. CLOSED TREE
UltraBlame original commit: c6fee9276fa2d9f298e9a081b5bcf4a8e3797316

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -227,6 +227,11 @@
   &[multiselected-move-together][multiselected]:not([selected]) {
     z-index: 2;
   }
+
+  &:is([visuallyselected], [multiselected]) {
+    color: var(--tab-selected-textcolor);
+    color-scheme: var(--tab-selected-color-scheme);
+  }
 }
 
 .tab-content {
@@ -238,11 +243,6 @@
 
   :root:not([uidensity=compact]) &[pinned] {
     padding: 0 10px;
-  }
-
-  &:is([selected], [multiselected]) {
-    color: var(--tab-selected-textcolor);
-    color-scheme: var(--tab-selected-color-scheme);
   }
 }
 
