Bug 1930292 - Turn chromemargin into a boolean attribute. r=win-reviewers,desktop-theme-reviewers,pip-reviewers,firefox-desktop-core-reviewers ,dao,mconley,rkraesig
There are probably other simplifications that can be done after this on the
windows side of things, but I tried to keep this minimal.

Differential Revision: https://phabricator.services.mozilla.com/D229765

UltraBlame original commit: 24a670dea977cae6c82bb86cec3e669cc6c17f69

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -263,7 +263,7 @@ body {
     visibility: hidden;
   }
 
-  :root:not([chromemargin], [inFullscreen]) & {
+  :root:not([customtitlebar], [inFullscreen]) & {
     display: none;
   }
 }
